# NetNotes

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: static.yml
benches/: comparison_benchmark.rs  mimblewimble_benchmark.rs  netnotes_benchmark.rs
confidential-tx/: Cargo.toml
confidential-tx/src/: main.rs
golang/: go.mod  go.sum  main.go
netnotes/: Cargo.toml
netnotes/benches/: mimblewimble_benchmark.rs
netnotes/src/: block.rs  blockchain.rs  lib.rs  main.rs  mimblewimble.rs  netnotes.rs  pedersen.rs  schnorr.rs
netnotes/tests/: mimblewimble_test.rs
one-many/: Cargo.toml
one-many/src/: main.rs
src/: lib.rs  mimblewimble.rs  netnotes.rs  pedersen.rs  schnorr.rs
testerino/: Cargo.toml
testerino/src/: main.rs
tests/: mimblewimble_test.rs  netnotes_test.rs
