[package]
name = "netnotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mimblewimble_benchmark"
harness = false

[dependencies]
blake3 = "1.3.3"
curve25519-dalek = "2.1.3"
hex = "0.4.3"
lazy_static = "1.4.0"
one-of-many-proofs = "0.1.0"
rand = "0.7"
sha3 = "0.8"
criterion = "0.3"
merlin = "2.0.0"
