[package]
name = "netnotes"
version = "0.1.0"
edition = "2021"

[features]
no_ooom_proofs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "comparison_benchmark"
harness = false

[dependencies]
blake3 = "1.3.3"
curve25519-dalek = "2.1.3"
hex = "0.4.3"
lazy_static = "1.4.0"
one-of-many-proofs = { git = "https://github.com/endrizzimarco/one-of-many-proofs" }
rand = "0.7"
sha3 = "0.8"
criterion = "0.3"
merlin = "2.0.0"
