[package]
name = "netnotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
curve25519-dalek = "2.1.3"
hex = "0.4.3"
lazy_static = "1.4.0"
one-of-many-proofs = "0.1.0"
rand = "0.7"
sha3 = "0.8"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
